--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,28 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/dotnet-postgres
 {
-    "name": "Mortein Queue Application",
-    "dockerComposeFile": "docker-compose.yaml",
-    "service": "devcontainer",
-    "workspaceFolder": "/workspaces/queue",
+    "name": "C# (.NET) and PostgreSQL",
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "app",
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
 
-    "features": {
-        "ghcr.io/devcontainers/features/dotnet:2": {},
-        "ghcr.io/devcontainers/features/node:1": {
-            "version": 20
-        },
-        "ghcr.io/guiyomh/features/vim:0": {}
-    },
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
 
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "esbenp.prettier-vscode",
-                "github.vscode-github-actions",
-                "ms-azuretools.vscode-docker",
-                "ms-dotnettools.csdevkit",
-                "redhat.vscode-yaml"
-            ]
-        }
-    },
+	// Configure tool-specific properties.
+	// "customizations": {},
 
-    "postCreateCommand": {
-        "npm-deps": "npm install",
-        "dotnet-deps": "dotnet restore Mortein",
-        "dotnet-tool-deps": "dotnet tool restore",
-        "xq": "sudo apt install xq"
-    }
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [5000, 5001, 5432],
+	// "portsAttributes": {
+	//		"5001": {
+	//			"protocol": "https"
+	//		}
+	// }
+
+    // Use 'postCreateCommand' to run commands after the container is created.
+    // "postCreateCommand": "dotnet --info",
+
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
