--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,20 @@
     "name": "C# (.NET) and PostgreSQL",
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 
+	"customizations": {
+        "vscode": {
+            "extensions": [
+                "esbenp.prettier-vscode",
+                "github.vscode-github-actions",
+                "ms-azuretools.vscode-docker",
+                "ms-dotnettools.csdevkit",
+                "redhat.vscode-yaml"
+            ]
+        }
+    },
+	"postCreateCommand": "dotnet restore"
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
