--- a/plantMetricHandler/src/plantMetricHandler/plantMetricHandler.csproj
+++ b/plantMetricHandler/src/plantMetricHandler/plantMetricHandler.csproj
@@ -13,5 +13,8 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.1" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Npgsql" Version="8.0.4" />
   </ItemGroup>
 </Project>
