--- a/plantMetricHandler/src/plantMetricHandler/plantMetricHandler.csproj
+++ b/plantMetricHandler/src/plantMetricHandler/plantMetricHandler.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Npgsql" Version="8.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 </Project>
