--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,11 +2,19 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/dotnet-postgres
 {
     "name": "C# (.NET) and PostgreSQL",
-    "dockerComposeFile": "docker-compose.yml",
+    "dockerComposeFile": "docker-compose.yaml",
     "service": "app",
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 
-	"customizations": {
+    "features": {
+        "ghcr.io/devcontainers/features/dotnet:2": {},
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": 20
+        },
+        "ghcr.io/guiyomh/features/vim:0": {}
+    },
+
+    "customizations": {
         "vscode": {
             "extensions": [
                 "esbenp.prettier-vscode",
@@ -17,24 +25,24 @@
             ]
         }
     },
-	"postCreateCommand": "dotnet restore"
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+    "postCreateCommand": "dotnet restore"
+    // Features to add to the dev container. More info: https://containers.dev/features.
+    // "features": {},
 
-	// Configure tool-specific properties.
-	// "customizations": {},
+    // Configure tool-specific properties.
+    // "customizations": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [5000, 5001, 5432],
-	// "portsAttributes": {
-	//		"5001": {
-	//			"protocol": "https"
-	//		}
-	// }
+    // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    // "forwardPorts": [5000, 5001, 5432],
+    // "portsAttributes": {
+    //		"5001": {
+    //			"protocol": "https"
+    //		}
+    // }
 
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "dotnet --info",
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+    // "remoteUser": "root"
 }
